feat: use newest kube-vip

--- a/metal/roles/k3s/templates/kube-vip.yaml.j2
+++ b/metal/roles/k3s/templates/kube-vip.yaml.j2
@@ -5,49 +5,63 @@ metadata:
   namespace: kube-system
 spec:
   containers:
-    - name: kube-vip
-      image: ghcr.io/kube-vip/kube-vip:v0.9.1
-      args:
-        - manager
-      env:
-        - name: address
-          value: {{ control_plane_endpoint }}
-        - name: vip_arp
-          value: "true"
-        - name: cp_enable
-          value: "true"
-        - name: vip_leaderelection
-          value: "true"
-        - name: lb_enable
-          value: "true"
-        - name: vip_leaseDuration
-          value: "30s"
-        - name: vip_renewDeadline
-          value: "20s"
-        - name: vip_retryPeriod
-          value: "5s"
-        - name: vip_lb_health_port      # probe every backend
-          value: "6443"
-        - name: vip_lb_health_path
-          value: "/readyz"
-        - name: vip_lb_health_interval  # seconds between probes
-          value: "3"
-        - name: vip_lb_health_failed_threshold
-          value: "3"        # drop after a single failure
-      securityContext:
-        capabilities:
-          add:
-            - NET_ADMIN
-            - NET_RAW
-      volumeMounts:
-        - mountPath: /etc/kubernetes/admin.conf
-          name: kubeconfig
+  - name: kube-vip
+    image: ghcr.io/kube-vip/kube-vip:v0.9.1
+    args:
+    - manager
+    env:
+    - name: address
+      value: {{ control_plane_endpoint }}
+    - name: vip_arp
+      value: "true"
+    - name: port
+      value: "6443"
+    - name: vip_nodename
+      valueFrom:
+        fieldRef:
+          fieldPath: spec.nodeName
+    - name: vip_interface
+      value: ens3
+    - name: vip_subnet
+      value: "32"
+    - name: dns_mode
+      value: first
+    - name: cp_enable
+      value: "true"
+    - name: cp_namespace
+      value: kube-system
+    - name: svc_enable
+      value: "true"
+    - name: svc_leasename
+      value: plndr-svcs-lock
+    - name: vip_leaderelection
+      value: "true"
+    - name: vip_leasename
+      value: plndr-cp-lock
+    - name: vip_leaseduration
+      value: "5"
+    - name: vip_renewdeadline
+      value: "3"
+    - name: vip_retryperiod
+      value: "1"
+    - name: prometheus_server
+      value: :2112
+    securityContext:
+      capabilities:
+        add:
+        - NET_ADMIN
+        - NET_RAW
+        drop:
+        - ALL
+    volumeMounts:
+    - mountPath: /etc/kubernetes/admin.conf
+      name: kubeconfig
   hostAliases:
-    - hostnames:
-        - kubernetes
-      ip: 127.0.0.1
+  - hostnames:
+    - kubernetes
+    ip: 127.0.0.1
   hostNetwork: true
   volumes:
-    - hostPath:
-        path: {{ k3s_kubeconfig_file }}
-      name: kubeconfig
+  - hostPath:
+      path: /etc/kubernetes/admin.conf
+    name: kubeconfig
