fix(kube-vip): add default account for in-cluster kubeconfig

--- a/metal/roles/k3s/templates/kube-vip.yaml.j2
+++ b/metal/roles/k3s/templates/kube-vip.yaml.j2
@@ -4,6 +4,7 @@ metadata:
   name: kube-vip
   namespace: kube-system
 spec:
+  serviceAccountName: default
   containers:
   - name: kube-vip
     image: ghcr.io/kube-vip/kube-vip:v0.9.1
