--- a/metal/roles/k3s/templates/kube-vip.yaml.j2
+++ b/metal/roles/k3s/templates/kube-vip.yaml.j2
@@ -1,68 +1,81 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: DaemonSet
 metadata:
-  name: kube-vip
+  labels:
+    app.kubernetes.io/name: kube-vip-ds
+    app.kubernetes.io/version: v0.9.1
+  name: kube-vip-ds
   namespace: kube-system
 spec:
-  serviceAccountName: default
-  containers:
-  - name: kube-vip
-    image: ghcr.io/kube-vip/kube-vip:v0.9.1
-    args:
-    - manager
-    env:
-    - name: address
-      value: {{ control_plane_endpoint }}
-    - name: vip_arp
-      value: "true"
-    - name: port
-      value: "6443"
-    - name: vip_nodename
-      valueFrom:
-        fieldRef:
-          fieldPath: spec.nodeName
-    - name: vip_interface
-      value: ens3
-    - name: vip_subnet
-      value: "32"
-    - name: dns_mode
-      value: first
-    - name: cp_enable
-      value: "true"
-    - name: cp_namespace
-      value: kube-system
-    - name: svc_enable
-      value: "true"
-    - name: svc_leasename
-      value: plndr-svcs-lock
-    - name: vip_leaderelection
-      value: "true"
-    - name: vip_leasename
-      value: plndr-cp-lock
-    - name: vip_leaseduration
-      value: "5"
-    - name: vip_renewdeadline
-      value: "3"
-    - name: vip_retryperiod
-      value: "1"
-    - name: prometheus_server
-      value: :2112
-    securityContext:
-      capabilities:
-        add:
-        - NET_ADMIN
-        - NET_RAW
-        drop:
-        - ALL
-    volumeMounts:
-    - mountPath: /etc/kubernetes/admin.conf
-      name: kubeconfig
-  hostAliases:
-  - hostnames:
-    - kubernetes
-    ip: 127.0.0.1
-  hostNetwork: true
-  volumes:
-  - hostPath:
-      path: /etc/kubernetes/admin.conf
-    name: kubeconfig
+  selector:
+    matchLabels:
+      app.kubernetes.io/name: kube-vip-ds
+  template:
+    metadata:
+      labels:
+        app.kubernetes.io/name: kube-vip-ds
+        app.kubernetes.io/version: v0.9.1
+    spec:
+      serviceAccountName: default
+      containers:
+      - args:
+        - manager
+        env:
+        - name: vip_arp
+          value: "true"
+        - name: port
+          value: "6443"
+        - name: vip_nodename
+          valueFrom:
+            fieldRef:
+              fieldPath: spec.nodeName
+        - name: vip_interface
+          value: ens3
+        - name: vip_subnet
+          value: "32"
+        - name: dns_mode
+          value: first
+        - name: cp_enable
+          value: "true"
+        - name: cp_namespace
+          value: kube-system
+        - name: svc_enable
+          value: "true"
+        - name: svc_leasename
+          value: plndr-svcs-lock
+        - name: vip_leaderelection
+          value: "true"
+        - name: vip_leasename
+          value: plndr-cp-lock
+        - name: vip_leaseduration
+          value: "5"
+        - name: vip_renewdeadline
+          value: "3"
+        - name: vip_retryperiod
+          value: "1"
+        - name: address
+          value: {{ control_plane_endpoint }}
+        - name: prometheus_server
+          value: :2112
+        image: ghcr.io/kube-vip/kube-vip:v0.9.1
+        imagePullPolicy: IfNotPresent
+        name: kube-vip
+        securityContext:
+          capabilities:
+            add:
+            - NET_ADMIN
+            - NET_RAW
+            drop:
+            - ALL
+        volumeMounts:
+        - mountPath: /etc/kubernetes/admin.conf
+          name: kubeconfig
+      hostAliases:
+      - hostnames:
+        - kubernetes
+        ip: 127.0.0.1
+      hostNetwork: true
+      volumes:
+      - hostPath:
+          path: /etc/kubernetes/admin.conf
+        name: kubeconfig
