--- a/metal/roles/k3s/templates/kube-vip.yaml.j2
+++ b/metal/roles/k3s/templates/kube-vip.yaml.j2
@@ -21,7 +21,7 @@ spec:
         fieldRef:
           fieldPath: spec.nodeName
     - name: vip_interface
-      value: ens3
+      value: enp1s0
     - name: vip_subnet
       value: "32"
     - name: dns_mode
